# playwright-test-fw

./: README.md  pyproject.toml
src/components/: __init__.py  login_modal.py  search.py
src/pages/: login_page.py
src/tests/: conftest.py
src/tests/regression/: login_test.py
