[tool.poetry]
name = "playwright-test-fw"
version = "0.1.0"
description = "Slowly learning Playwright for test automation and its industry use-cases"
authors = ["Sambhav Dave <sambhavd4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
pytest-html = "^4.1.1"
playwright = "^1.45.1"
autohooks = "^23.4.0"
autohooks-plugin-black = "^23.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black"]
